Use env var for RabbitMQ connection

--- a/.env.dev
+++ b/.env.dev
@@ -2,3 +2,4 @@ GENERATOR_SERVICE_URL=http://127.0.0.1:8000
 JWT_SECRET_KEY=SOME_SECRET_KEY
 MONGODB_URL=127.0.0.1:27017
 MONGODB_NAME=ftl_db
+RABBITMQ_URI=amqp://guest:guest@localhost:5672
